k8s/applications/media/viewtube/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewtube-deployment
  namespace: viewtube
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: viewtube
          image: index.docker.io/mauriceo/viewtube:latest
          ports:
            - containerPort: 8066
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
