k8s/applications/media/viewtube/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: viewtube-service
  namespace: viewtube
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8066
