k8s/applications/media/viewtube/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: viewtube-httproute
  namespace: viewtube
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: https-wc-talmox-hera-home-karlsen-fr
  hostnames:
    - viewtube.talmox.hera.home.karlsen.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: viewtube-service
          port: 80
